--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="add_alarm_btn_content_description">Add alarm</string>
 
     <string name="time_picker_title">Select Time</string>
+
+    <string name="btn_edit_alarm_text">Edit</string>
+
+    <string name="alarm_state_on">Alarm is on</string>
+    <string name="alarm_state_off">Alarm is off</string>
+
+    <string name="delete_alarm">Delete</string>
+    <string name="save_alarm">Save</string>
 </resources>
